worked on small designing issues

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
   justify-content: center;
   align-items: center;
   object-fit: contain;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   overflow: hidden;
 }
 
@@ -33,6 +33,7 @@ body {
   flex-direction: column;
   text-align: center;
   max-width: 100%;
+  width:100dvw;
   margin: 0 auto;
   position: fixed;
   top: 0;
@@ -119,14 +120,14 @@ body {
 
 
 .background-gameplay {
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 .background-gameplay img {
   position: fixed;
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 canvas {
@@ -247,24 +248,31 @@ canvas {
 
 .instruction {
   position: relative;
-  max-width: 100%;
-  max-height: 100vh;
-  /* border: 2px solid #fff; */
+  display: flex;
+  flex-direction: column;
   border-radius: 5px;
   z-index: 1;
+  justify-content: center;
 }
 
-.image-container {
-  height: auto;
-  margin: 0 auto;
-  max-width: 100%;
-  width: auto;
-  position: relative;
-}
 
 .image-container img {
   max-width: 100%;
   height: auto;
+}
+
+.image-container-ingame {
+    display:flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    max-width: 650px;
+    max-height: 360px;
+    min-width: 500px;
+    min-height: 300px;
 }
 
 /* Hide all images except the first one */
@@ -303,12 +311,12 @@ canvas {
 
 .instruction-ingame {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 50%;
   left: 50%;
   z-index: 2;
   transform: translate(-50%, -50%);
-  border: 2px solid #fff;
-  border-radius: 5px;
   max-width: 650px;
   max-height: 360px;
   min-width: 500px;
@@ -317,9 +325,13 @@ canvas {
 
 
 .movement-heading {
+  display:flex;
+  justify-content:start;
   color: #fff;
-  padding: 10px 20px;
-  font-size: 25px;
+  position: relative;
+  z-index: 5;
+  padding: 15px;
+  padding-bottom:0;
 }
 
 .movement-heading h1 {
@@ -328,9 +340,7 @@ canvas {
 
 .instruction img {
   max-width: 650px;
-    max-height: 360px;
-    min-width: 500px;
-    min-height: 300px;
+  max-height: 400px;
 }
 
 .instruction-ingame img {
@@ -492,17 +502,10 @@ canvas {
 
 @media (min-width: 1920px) {
   .background-image img {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
   }
 }
-
-/* @media (min-width: 1800px) {
-  .instruction-ingame img {
-    position: relative;
-    bottom: 50px;
-  }
-} */
 
 /* Media for  endscreen and loadscreen*/
 @media (max-height: 720px) {
@@ -526,15 +529,6 @@ canvas {
     height: 80vh;
   }
 
-  .instruction-ingame {
-    height: 70vh;
-    width: 70vw;
-  }
-
-  .instruction-ingame img {
-    position: relative;
-    bottom: 70px;
-  }
 }
 
 /* Mobile Buttons End */
@@ -569,10 +563,10 @@ canvas {
 
 @media only screen and (max-height: 480px) {
   #canvas {
-    height: 100vh;
-    width: 100vw;
-    top: auto;
-    left: auto;
+    height: 100dvh;
+    width: 100dvw;
+    /* top: auto;
+    left: auto; */
   }
 
   .start-button img {
@@ -582,13 +576,9 @@ canvas {
   .endscreen img {
     width: 150px;
   }
-  .instruction-ingame img {
-    position: relative;
-    bottom: 70px;
-  }
 }
 
-@media only screen and (max-width: 480px), (max-height: 479px) {
+@media only screen and (max-width: 820px), (max-height: 719px) {
   .panel {
     display: flex;
   }
@@ -602,7 +592,7 @@ canvas {
 
 
 
-@media (min-width: 480px) {
+@media (min-width: 720px) {
   .tilt-device-container {
     display: none;
   }
